[gd_scene load_steps=11 format=3 uid="uid://cpdjbcrkxnfah"]

[ext_resource type="Script" uid="uid://bqjkkfvi73lrr" path="res://Scenes/Gui/BuyBooster/buy_booster_item.gd" id="1_ejt25"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/hammer.tres" id="2_nn6fd"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="3_qw8ku"]
[ext_resource type="Texture2D" path="res://Assets/game_over/try_again_coin_button.tres" id="4_nn6fd"]
[ext_resource type="Texture2D" path="res://Assets/coin.tres" id="5_nn6fd"]
[ext_resource type="Texture2D" path="res://Assets/game_over/try_again_ads_button.tres" id="6_nn6fd"]
[ext_resource type="Texture2D" path="res://Assets/game_over/ADS.tres" id="7_nn6fd"]

[sub_resource type="LabelSettings" id="LabelSettings_g1jly"]
font = ExtResource("3_qw8ku")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_d4i0e"]
font = ExtResource("3_qw8ku")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ouw2t"]
font = ExtResource("3_qw8ku")
font_size = 40

[node name="ForCoins" type="VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
alignment = 1
script = ExtResource("1_ejt25")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 55.0
offset_bottom = 110.0
grow_horizontal = 2
texture = ExtResource("2_nn6fd")
expand_mode = 3
stretch_mode = 2

[node name="Count" type="Label" parent="Control/Icon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -29.0
offset_right = 42.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_g1jly")

[node name="BuyForCoins" type="TextureButton" parent="."]
visible = false
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_nn6fd")
texture_pressed = ExtResource("4_nn6fd")
texture_hover = ExtResource("4_nn6fd")
texture_focused = ExtResource("4_nn6fd")
stretch_mode = 3

[node name="CoinIcon" type="TextureRect" parent="BuyForCoins"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -22.0
offset_right = 26.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_nn6fd")

[node name="Label" type="Label" parent="BuyForCoins"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -23.0
offset_right = 81.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_d4i0e")
horizontal_alignment = 1

[node name="BuyForADS" type="TextureButton" parent="."]
visible = false
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("6_nn6fd")
texture_pressed = ExtResource("6_nn6fd")
texture_hover = ExtResource("6_nn6fd")
texture_focused = ExtResource("6_nn6fd")
stretch_mode = 3

[node name="AdsIcon" type="TextureRect" parent="BuyForADS"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -20.0
offset_right = 72.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_nn6fd")

[node name="Label" type="Label" parent="BuyForADS"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -23.0
offset_right = 76.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "ADS"
label_settings = SubResource("LabelSettings_ouw2t")
horizontal_alignment = 2

[connection signal="pressed" from="BuyForCoins" to="." method="_on_buy_for_coins_pressed"]
[connection signal="pressed" from="BuyForADS" to="." method="_on_buy_for_ads_pressed"]
